# py-ut-generator

./: .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyutgen.py  run_utgen.py
.github/workflows/: codeql-analysis.yml  pylint.yml  pytest_36.yml  pytest_37.yml
docs/: conf.py  index.rst  install.rst  mock_open.rst  use.rst
pyutgenerator/: ast_util.py  code_analysis.py  const.py  files.py  objects.py  run.py  templates.py
tests/pyutgenerator/: test_ast_util.py  test_pattern01.py  test_pattern02.py  test_pattern03.py  test_pattern04.py  test_pattern05.py  test_pattern06.py  test_pattern07.py  test_pattern08.py  test_pattern09.py  test_pattern10.py
tests/pyutgenerator/data/: pattern01.py  pattern02.py  pattern03.py  pattern04.py  pattern05.py  pattern06.py  pattern07.py  pattern08.py  pattern09.py  pattern10.py  td_funcs.py
tests/tests/pyutgenerator/data/: test_pattern01.py  test_pattern02.py  test_pattern03.py  test_pattern04.py  test_pattern05.py  test_pattern06.py  test_pattern07.py  test_pattern08.py  test_pattern09.py  test_pattern10.py
