[tool.poetry]
name = "pyutgenerator"
version = "0.5.0"
description = "python ut test code generator."
authors = ["shigeshige <5540474+shigeshige@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/shigeshige/py-ut-generator"
repository = "https://github.com/shigeshige/py-ut-generator"
readme = "README.md"

[tool.poetry.scripts]
pyutgen = 'pyutgenerator.run:main'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
autopep8 = "*"
pep8 = "*"
flake8 = "*"
mypy = "*"
poetry = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
